--- a/netlify.toml
+++ b/netlify.toml
@@ -11,7 +11,7 @@
   publish = "build"
 
   # Default build command.
-  command = "npm run build"
+  command = "sed -i s/API_KEY_PLACEHOLDER/${DARKSKY_API_KEY}/g netlify.toml && npm run build"
 
 # A basic redirect rule
 [[redirects]]
